--- a/src/assets/stylesheets/components/_map.scss
+++ b/src/assets/stylesheets/components/_map.scss
@@ -10,8 +10,9 @@
   @include mobile-break {
     /* Since the map is flex-child, and flex will calculate the height after render, 
     we need to give the map a height in order to get mapbox to render in full  */
-    height: 1px;
-    flex-grow: 1;
+    position: absolute;
+    top: 0;
+    flex: 1 1 100%;
   }
 }
 
